--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 html {
-  width: auto;
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
@@ -28,7 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   height: auto;
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
 }
 
